# data-ingestion-project

./: .gitignore  README.md  Untitled.ipynb  Untitled1.ipynb  data_explore.ipynb  data_pydantic_explore.ipynb  database.db  db.py  get_data.py  models.py  setup.cfg
notebooks/: data_explore.ipynb  data_pydantic_explore.ipynb
sf_parks/: data.py  database.db  db.py  main.py  models.py  run.sh
sf_parks/sql/: park_ratings_recent.sql  view_properties_and_ratings.sql
