[metadata]
name = sf-parks
version = 0.0.1
description = Command-line tool for building, populating, and destroying a local sf-parks database from publicly available data
long_description = README.md 
classifiers = 
    Programming Language :: Python :: 3.11 

[options]
packages = find:
include_package_data = True
install_requires = 
    sqlmodel==0.0.8
    pydantic==1.10.6
    pandas==1.5.3
    requests==2.28.2

[options.entry_points]
console_scripts = 
    sf-parks = sf_parks.main:main

